2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Box_Instruction__c/Carton_Box_Instruction__c.object-meta.xml
<CustomObject>
    <label>Carton Box Instruction 纸箱说明</label>
    <nameField>
        <displayFormat>CBI{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carton Box Instructions 纸箱说明</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>