2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Box_Instruction__c/fields/Cardboard_Type__c.field-meta.xml
<CustomField>
    <fullName>Cardboard_Type__c</fullName>
    <label>Cardboard Type 纸板类型</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Double Wall 双墙</fullName>
                <default>true</default>
                <label>Double Wall 双墙</label>
            </value>
            <value>
                <fullName>Tri Wall 三墙</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>