2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Box_Instruction__c/fields/Carton_Box_Details__c.field-meta.xml
<CustomField>
    <fullName>Carton_Box_Details__c</fullName>
    <defaultValue>&quot;No. / LxBxH (cm)&quot; &amp; BR() &amp;
&quot;号 / 长x寬x高 (cm)&quot;</defaultValue>
    <label>Carton Box Details 描述/尺寸</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>