2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Box_Instruction__c/fields/Carton_Box_Type__c.field-meta.xml
<CustomField>
    <fullName>Carton_Box_Type__c</fullName>
    <label>Carton Box Type 纸盒类型</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Envelope</fullName>
                <default>true</default>
                <label>Envelope</label>
            </value>
            <value>
                <fullName>Pizza</fullName>
            </value>
            <value>
                <fullName>Shoe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>