2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Box_Instruction__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client 客户名称</label>
    <length>40</length>
    <type>Text</type>
</CustomField>