2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Box_Instruction__c/fields/Foam__c.field-meta.xml
<CustomField>
    <fullName>Foam__c</fullName>
    <label>Foam</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>1 inch PE</fullName>
            </value>
            <value>
                <fullName>2 inch PE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>