2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Box_Instruction__c/fields/Required_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Required_Date_Time__c</fullName>
    <label>Required Date &amp; Time 送达日期/时间</label>
    <type>DateTime</type>
</CustomField>